Update Twitter Scraper World Cloud- Spanish.ipynb

--- a/Twitter Scraper World Cloud- Spanish.ipynb
+++ b/Twitter Scraper World Cloud- Spanish.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\r\n",
     "auth.set_access_token(access_token, access_token_secret)\r\n",
-    "api = tweepy.API(auth)"
+    "api = tweepy.API(auth, wait_on_rate_limit=True)"
    ],
    "outputs": [],
    "metadata": {}
